@@ -123,6 +123,8 @@ because of Phabricator reports.
 * ISQLPlatform::tableNamesN() is now deprecated.
 * The implementation in SQLPlatform of ISQLPlatform::tableNames(), deprecated in
   MediaWiki 1.39, now emits deprecation warnings.
+* ContentHandler::getContentText(), deprecated in 1.37, now emits deprecation
+  warnings.
 * …
 
 === Other changes in 1.43 ===
